--- a/src/CSS/Tienda.css
+++ b/src/CSS/Tienda.css
@@ -1,20 +1,4 @@
-button {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer;
-  }
-  .on {
-    color: rgb(0, 255, 42);
-  }
-  .off {
-    color: rgba(178, 202, 166, 0.795);
-  }
 
-
-.line{
-  text-decoration:line-through;
+.body{
+    background-color: #09676a;
 }
-
-
-
