--- a/src/CSS/infoContenido.css
+++ b/src/CSS/infoContenido.css
@@ -2,7 +2,16 @@
 
 
 .info{
-    background-color: rgb(10, 10, 10) !important;
+    background-color: rgb(1, 35, 63) !important;
     color: white;
     margin: 2%;
+    font-size: xx-large;
+}
+
+.rankings{
+    color: aquamarine;
+}
+
+.line{
+    color:white
 }
