--- a/src/CSS/Box.css
+++ b/src/CSS/Box.css
@@ -4,7 +4,7 @@
     margin: 15px ;
     background-color: black !important;
     color: white;
-    align-items: ;
+    /* align-items: c; */
 }
 
 
